# resume-match-engine

./: README.md  main.py  pyproject.toml
Astro_frontend/src/components/: Sidebar.astro
Astro_frontend/src/pages/: index.astro  personal-projects.astro  software-development.astro
Backend/: .gitignore  Dockerfile  docker-compose.yml  dockerfile
Backend/Api/: routes.py
Backend/utils/: context_caching.py  db_manager.py  phaser.py  prompts.py
Frontend_Streamlit/: app.py  main.py  pyproject.toml
utils/: config.py
